--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,15 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.1.0@aar'
-    compile 'com.android.support:support-v4:22.1.0@aar'
-    compile 'com.android.support:cardview-v7:22.1.0@aar'
-    compile 'com.android.support:palette-v7:22.1.0@aar'
-    compile 'com.android.support:recyclerview-v7:22.1.0@aar'
+    compile 'com.android.support:appcompat-v7:23.2.0@aar'
+    compile 'com.android.support:support-v4:23.2.0@aar'
+    compile 'com.android.support:cardview-v7:23.2.0@aar'
+    compile 'com.android.support:palette-v7:23.2.0@aar'
+    compile 'com.android.support:recyclerview-v7:23.2.0@aar'
 
-    compile 'com.afollestad:material-dialogs:0.7.6.0'
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.6@aar') {
+        transitive = true
+    }
     compile('com.mikepenz.materialdrawer:library:2.9.5@aar') {
         transitive = true
     }
